# cmem-plugin-base

./: .copier-answers.env  .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  PydanticEntityModels.md  README.md  Taskfile.yaml  TaskfileCustom.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: check.yml  publish.yml
cmem_plugin_base/: __init__.py  testing.py
cmem_plugin_base/dataintegration/: context.py  description.py  discovery.py  entity.py  plugins.py  ports.py  types.py  utils.py
cmem_plugin_base/dataintegration/matching/: matcher.py
cmem_plugin_base/dataintegration/parameter/: __init__.py  choice.py  code.py  dataset.py  graph.py  multiline.py  password.py  resource.py
cmem_plugin_base/dataintegration/typed_entities/: __init__.py  file.py  quads.py  typed_entities.py
cmem_plugin_base/dataintegration/utils/: __init__.py  entity_builder.py  file_stream.py  pydantic_entities.py
docs/superpowers/plans/: 2026-07-19-migrate-cmempy-to-cmem-client.md
tests/: conftest.py  test_cmem_plugin_base.py  test_description.py  test_discovery.py  test_file_stream.py  test_icon.py  test_output_only_plugin.py  test_pydantic_entities.py  test_testing.py  test_types.py  test_utils_build_entities_from_data.py  test_utils_file_stream.py  test_utils_setup_cmem_client.py  test_utils_write_to_dataset.py  utils.py
tests/parameter_types/: test_choice.py  test_code.py  test_dataset.py  test_graph.py  test_password.py  test_resource.py
tests/typed_entities/: test_quads.py  test_typed_entities.py
